erDiagram
    usuarios ||--o{ sesiones : "tiene"
    usuarios ||--o{ builds : "crea"
    usuarios ||--o{ campeones_favoritos : "tiene"
    usuarios ||--o{ equipos_ideales : "crea"
    usuarios ||--o{ comentarios_equipos : "escribe"
    usuarios ||--o{ solicitudes_amistad : "envia_solicitud"
    usuarios ||--o{ solicitudes_amistad : "recibe_solicitud"
    usuarios ||--o{ blocked_users : "bloquea"
    usuarios ||--o{ blocked_users : "es_bloqueado"
    usuarios ||--o{ mensajes_amistad : "envia_mensaje"
    usuarios ||--o{ mensajes_amistad : "recibe_mensaje"
    usuarios ||--o{ tokens_acceso_personal : "tiene"
    
    equipos_ideales ||--o{ comentarios_equipos : "tiene"
    
    campeones ||--o{ builds : "referenciado_en"
    campeones ||--o{ campeones_favoritos : "es_favorito"
    
    usuarios {
        bigint id PK
        string nombre
        string correo UK
        timestamp correo_verificado_en
        string contrasenya
        string remember_token
        string avatar_path
        string banner_path
        json favorite_items
        json favorite_runes
        string selected_decoration_key
        timestamp created_at
        timestamp updated_at
    }
    
    tokens_reseteo_contrasenya {
        string correo PK
        string token
        timestamp creado_en
    }
    
    sesiones {
        string id PK
        bigint id_usuario FK
        string direccion_ip
        text agente_usuario
        longtext datos
        integer ultima_actividad
    }
    
    campeones {
        bigint id PK
        string id_campeon UK
        string nombre
        string titulo
        text historia
        json etiquetas
        json estadisticas
        json habilidades
        json recomendados
        string url_imagen
        timestamp created_at
        timestamp updated_at
    }
    
    objetos {
        bigint id PK
        string id_objeto UK
        string nombre
        text descripcion
        text texto_plano
        json etiquetas
        json estadisticas
        integer oro_total
        integer oro_base
        integer oro_venta
        boolean comprable
        json mapas
        string url_imagen
        timestamp created_at
        timestamp updated_at
    }
    
    builds {
        bigint id PK
        bigint id_usuario FK
        string id_campeon
        string nombre
        json objetos
        text descripcion
        boolean es_publica
        timestamp created_at
        timestamp updated_at
    }
    
    campeones_favoritos {
        bigint id PK
        bigint id_usuario FK
        string id_campeon
        timestamp created_at
        timestamp updated_at
    }
    
    equipos_ideales {
        bigint id PK
        bigint id_usuario FK
        string nombre
        json campeones
        json objetos
        json runas
        text descripcion
        timestamp created_at
        timestamp updated_at
    }
    
    comentarios_equipos {
        bigint id PK
        bigint id_equipo FK
        bigint id_usuario FK
        text comentario
        timestamp created_at
        timestamp updated_at
    }
    
    solicitudes_amistad {
        bigint id PK
        bigint requester_id FK
        bigint receiver_id FK
        enum status
        timestamp accepted_at
        timestamp created_at
        timestamp updated_at
    }
    
    blocked_users {
        bigint id PK
        bigint blocker_id FK
        bigint blocked_id FK
        timestamp created_at
        timestamp updated_at
    }
    
    mensajes_amistad {
        bigint id PK
        bigint sender_id FK
        bigint receiver_id FK
        text message
        timestamp read_at
        timestamp created_at
        timestamp updated_at
    }
    
    suggestions {
        bigint id PK
        string name
        text message
        timestamp created_at
        timestamp updated_at
    }
    
    tokens_acceso_personal {
        bigint id PK
        string tokenable_type
        bigint tokenable_id
        string nombre
        string token UK
        text habilidades
        timestamp ultimo_uso_en
        timestamp expira_en
        timestamp created_at
        timestamp updated_at
    }
